public/css/style.css
/* ... */
.caption h2 {
    width: 300px;
    /* margin-left: 50%;*/
}

.caption p {
    width: 800px;
}

.banner-category {
    /* margin-top: 100px; */
    background: none;
    margin: 0px;
    margin-bottom: 20px;
}

.border-right {
    margin-top: 25px!important;
}

.border-right p {
    /* border-right: 0.5px solid gray!important; */
    color: white;
}

.category-box {
    margin-top: 100px;
}

.category .uk-grid div {
    width: 150px!important;
    padding: 0px;
    margin: 0px;
}

.category {
    margin-left: 22%;
}

.header-title-span {
    font-size: 15px;
    color: #03A9F4;
    font-weight: 400;
}

.header-title {
    font-weight: bold;
    text-transform: uppercase;
}

.popularly-most img {
    height: 500px!important;
    width: 100%;
    border-radius: 50px;
}

.uk-light svg {
    color: white;
    /*    width: 100px;*/
    height: 30px;
}


/* .destination-slider{
    background: linear-gradient(180deg, rgb(65, 165, 247) 0%, rgba(27,40,198,1) 100%);
} */

span.flatpickr-weekday {
    color: white;
}

.destintination-categorybox img {
    height: 200px;
}

.holiday-destination a {
    background: #03A9F4;
}

.search-btn-content {
    border: none;
}


/* search content */

.search-content label {
    font-size: 20px;
}

.search-content .uk-input {
    width: 274px;
    height: 60px;
}

.search-content .uk-select:not([multiple]):not([size]) {
    height: 60px;
}


/* popular destination  */

.popular-destination li img {

    height: 151.97px!important;
}

/*hir*/

.content-slider-box h3 {
    padding: 20px;
}

.content-slider-box p {
    padding: 10px;
}

.search-tour {
    background: #03A9F4;
}

.search-header span {
    color: white!important;
}

.search-content label {
    color: white;
}

.search-content-btn {
    background: white;
    border-radius: 100px;
    color: black;
}

.search-content-btn:hover {
    color: white;
    border: 1px solid white;
}

.parallax {
    background-image: url("../image/gokyo.jpg");
    /* width: 100%;
    background-position: center;
    background-size: cover;
    background-attachment: fixed; */
    height: 500px;
}

.parallax .uk-overlay-default {
    position: relative;
    width: 100%;
    background: black;
    opacity: 0.5;
}

.parallax-content-box {
    position: absolute;
    width: 100%;
    height: 400px;
}

.parallax-content-box h1 {
    margin-top: 200px;
}

.uk-card-body {
    height: 200px;
}

.footer {
    background-color: #03A9F4;
}

.thingstodo img {
    width: 100%;
    height: 229.33px!important;
}

.thingstodo-overlay {
    height: 300px!important;
}

.footer-content {
    color: white;
}

.social-icon li {
    display: inline!important;
}

.footer p {
    color: white;
}

.footer-content h4 {
    font-weight: 700;
    color: white;
}


/* login navbar */

.login-navbar {
    background-color: #03A9F4;
    color: white;
}

.login-btn-navbar .uk-button-default {
    margin-top: 22px;
    /* line-height: 40px; */
    width: 144px;
    min-height: 42px;
    /* padding: 0px; */
    border-radius: 100px;
}

.login-btn-navbar a {
    color: white;
}

.right-navbar-login li a:hover {
    color: white!important;
}

.form-bg {
    margin-top: 10px;
    background-color: #03A9F4;
    color: white;
}

.form-bg {
    border-radius: 100px;
    padding: 0px 30px;
}

.form-g {
    padding-left: 47px;
    padding-right: 35px;
}

.form-bg:hover {
    background: rgb(24, 167, 233)!important;
    color: white;
}

.login-footer {
    margin-top: 55px!important;
}

.signup-form-cardbox {
    height: 400px;
}


/*USER DASHBOARD CSS*/

.userdashboardbanner {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../image/holidayspokhara.jpg");
    width: 100%;
    height: 500px;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

#u-d .userdashboardbanner {
    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../image/holidayspokhara.jpg");
    width: 100%;
    height: unset !important;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}


/*.userdashboardbannerbox{*/


/*    width: 80%;*/


/*}*/

.userdashboardbox h1 {
    color: white;
    font-weight: bold;
}

.userdashboardbox p {
    color: white;
}

.userdashboardsearch .uk-search-input {
    color: white!important;
}

.userdashboardsearch .uk-search-input::placeholder {
    color: white;
}

.userdashboardsearch svg {
    color: white;
}

#userdashboardsection .uk-card-body {
    height: auto;
}


/*Contact page css*/

.contactbox .uk-card-body {
    height: 500px;
}

.contactbox .uk-list li a {
    font-size: 18px;
    color: black;
}


/*event page style*/


/*.event-box .eventmaincontent{*/


/*    width: 800px;*/


/*}*/


/*.event-box .eventsidecontent{*/


/*    width: 400px;*/


/*}*/

.back button {
    margin-left: 60px;
    margin-top: 150px;
    background: white;
    color: black;
}

.back button:hover {
    border-color: white!important;
}


/*welcome -> banner icon svg css*/

.icon {
    display: inline-block;
    width: 1em;
    height: 1em;
    stroke-width: 0;
    stroke: currentColor;
    fill: currentColor;
}

.banner-category svg {
    width: 100px!important;
    height: 50px;
}

.banner-category {
    width: 150px!important
}

.banner-category p a {
    text-decoration: none;
}

.banner-category a,
.banner-category svg {
    transition: all ease-in-out .3s;
}

.banner-category:hover a,
.banner-category svg:hover,
.banner-category:hover svg {
    color: #03A9F4!important;
    cursor: pointer;
    transform: translateY(5px);
    transition: all ease-in-out .3s;
}


/*admin dashboard css*/

.adminnav {
    background: #03A9F4!important;
}

#destform #select {
    /*  background-color:rgb(12, 147, 209)!important;*/
    border-color: rgb(12, 147, 209)!important;
    /*color:rgb(12, 147, 209)!important;;*/
}

#destform #select option {
    background: white !important;
    color: grey !important;
}
/* ... */

